<resources>
    <string name="app_name">Multilanguage</string>
    <string name="strTieuDeUserName">User Name</string>
    <string name="strHintUserName">User name is here</string>
    <string name="strTieuDePassword">Password</string>
    <string name="strHintPassword">Password is here</string>
    <string name="strButtonLogIn">Login</string>
    <string name="strButtonCancel">Cancel</string>
</resources>
